# quant-robot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: accounting_quality_directional_audit_round245_20260625.json  accounting_quality_industry_relative_surprise_round253_20260625.json  accounting_quality_new_substructure_round244_20260625.json  accounting_quality_new_substructure_seed_round243_20260625.json  accounting_quality_statement_backfill_round236_20260625.json  accounting_quality_statement_event_drift_round246_20260625.json  accounting_quality_statement_profitability_revision_round247_20260625.json  accounting_quality_statement_smoke_plan_round237_20260625.json  backtest.yaml  china_market_regime_control_policy_cn_stock.json  cn_stock_authority_bars_2015_2024.json  cn_stock_authority_bars_2015_2025.json  cn_stock_authority_bars_2015_2025_adjusted_ratio_clean.json  cn_stock_authority_bars_2015_2025_adjusted_ratio_repaired.json  cn_stock_authority_daily_basic_inputs_2015_2024.json  cn_stock_authority_daily_basic_inputs_2015_2025.json  cn_stock_authority_moneyflow_inputs_2015_2025.json  cn_stock_batch12_validation_handoff_20260617.json  cn_stock_profit_sprint_ps_gt10_self_risk_paper_ops_review_20260704.json  cn_stock_profit_sprint_simulation_shortlist_20260627.json  cn_stock_round467_analyst_report_revision_retry_plan_20260704.json  constrained_candidate_search_cn_etf.json  daily_basic_candidate_specs_round211_valuation_reversion_coverage_repair_20260624.json  data_gap_resolutions_cn_etf.csv  data_sources.yaml  experiment_grid.json  (+149 more)
(+2396 files in other folders)
