[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-robot"
version = "0.1.0"
description = "Local multi-market quantitative research framework without live trading."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15"]
reports = ["matplotlib>=3.8"]
data = ["akshare>=1.15", "tushare>=1.4", "yfinance>=0.2", "ccxt>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]
